<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#354CB6B6"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textFontWeight="@android:integer/config_mediumAnimTime"
                android:text="@string/main_title"
                android:textColor="#00000B"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/New_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_game_label" />

                <Button
                    android:id="@+id/Continue_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Continue_label" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/About_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label" />

                <Button
                    android:id="@+id/Exit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_label" />
            </TableRow>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>